@@ -39,7 +39,8 @@ import static org.mockito.Mockito.verify;
 import android.annotation.SuppressLint;
 import android.content.ClipData;
 import android.content.ClipDescription;
-import android.content.Context;
+import android.content.ContentUris;
+import android.content.pm.ProviderInfo;
 import android.graphics.drawable.Drawable;
 import android.net.Uri;
 import android.os.Build;
@@ -75,6 +76,7 @@ import com.android.documentsui.testing.ClipDatas;
 import com.android.documentsui.testing.KeyEvents;
 import com.android.documentsui.testing.TestActionHandler;
 import com.android.documentsui.testing.TestDocumentClipper;
+import com.android.documentsui.testing.TestDocumentsAccess;
 import com.android.documentsui.testing.TestDrawable;
 import com.android.documentsui.testing.TestEnv;
 import com.android.documentsui.testing.TestEventListener;
@@ -94,8 +96,8 @@ import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 
 @RunWith(AndroidJUnit4.class)
@@ -103,7 +105,6 @@ import java.util.stream.Collectors;
 public class DragAndDropManagerTests {
 
     private static final Uri MEDIA_STORE_URI_0 = Uri.parse("content://media/files/1");
-    private static final Uri MEDIA_STORE_URI_1 = Uri.parse("content://media/files/2");
     private static final Uri NON_MEDIA_STORE_URI_0 = Uri.parse("content://non-media/files/1");
     private static final String PLURAL_FORMAT = "%1$d items";
     private static final boolean CAN_DRAG_AND_DROP = true;
@@ -115,6 +116,7 @@ public class DragAndDropManagerTests {
     private View mStartDragView;
     private View mUpdateShadowView;
     private TestActionHandler mActions;
+    private TestDocumentsAccess mDocs;
 
     private TestDocumentClipper mClipper;
     private TestSelectionDetails mDetails;
@@ -145,13 +147,13 @@ public class DragAndDropManagerTests {
     public final CheckFlagsRule mCheckFlagsRule = DeviceFlagsValueProvider.createCheckFlagsRule();
 
     @Mock private Permissions mMockPermissions;
-    @Mock private BiFunction<Context, Uri, Uri> mMockMediaStoreToDocumentUriRewriter;
 
     @Before
     public void setUp() {
         mEnv = TestEnv.create();
         mActivity = TestActivity.create(mEnv);
         mActivity.resources.plurals.put(R.plurals.elements_dragged, PLURAL_FORMAT);
+        mEnv.providers.configurePm(mActivity.packageMgr);
 
         mShadowBuilder = TestDragShadowBuilder.create();
 
@@ -159,6 +161,7 @@ public class DragAndDropManagerTests {
         mUpdateShadowView = Views.createTestView();
 
         mActions = new TestActionHandler(mEnv);
+        mDocs = new TestDocumentsAccess();
 
         mClipper = new TestDocumentClipper();
         mDetails = new TestSelectionDetails();
@@ -178,7 +181,7 @@ public class DragAndDropManagerTests {
         mFlagListener = new TestEventListener<>();
 
         mManager = new RuntimeDragAndDropManager(mActivity, mClipper, mEnv.mExecutor,
-                mShadowBuilder, mDefaultIcon, mMockMediaStoreToDocumentUriRewriter) {
+                mShadowBuilder, mDefaultIcon, mEnv.providers) {
             @Override
             void startDragAndDrop(View v, ClipData clipData, DragShadowBuilder builder,
                     Object localState, int flag) {
@@ -1010,6 +1013,7 @@ public class DragAndDropManagerTests {
                         mManager,
                         TestProvidersAccess.HAMMY,
                         mActions,
+                        mDocs,
                         mCallback,
                         mManager.getInvalidDestinations()));
 
@@ -1044,6 +1048,7 @@ public class DragAndDropManagerTests {
                         mManager,
                         root,
                         mActions,
+                        mDocs,
                         mCallback,
                         mManager.getInvalidDestinations()));
 
@@ -1073,6 +1078,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.DOWNLOADS,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1107,6 +1113,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.DOWNLOADS,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1144,6 +1151,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.DOWNLOADS,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1185,6 +1193,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.DOWNLOADS,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1220,7 +1229,8 @@ public class DragAndDropManagerTests {
         final DocumentStack stack = new DocumentStack(
                 TestProvidersAccess.HAMMY, TestEnv.FOLDER_1, TestEnv.FOLDER_2);
         assertFalse(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         verify(mMockPermissions).release();
     }
@@ -1245,7 +1255,8 @@ public class DragAndDropManagerTests {
         final DocumentStack stack = new DocumentStack(
                 TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_1, TestEnv.FOLDER_2);
         assertTrue(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         mEnv.beforeAsserts();
 
@@ -1275,7 +1286,8 @@ public class DragAndDropManagerTests {
         final DocumentStack stack = new DocumentStack(
                 TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_1, TestEnv.FOLDER_2);
         assertTrue(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         mEnv.beforeAsserts();
 
@@ -1303,7 +1315,8 @@ public class DragAndDropManagerTests {
         final DocumentStack stack = new DocumentStack(
                 TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_1, TestEnv.FOLDER_2);
         assertTrue(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         mEnv.beforeAsserts();
 
@@ -1342,6 +1355,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.TEST_SHORTCUT,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1384,6 +1398,7 @@ public class DragAndDropManagerTests {
                         mManager,
                         TestProvidersAccess.HOME_SCREEN_SHORTCUT,
                         mActions,
+                        mDocs,
                         mCallback,
                         mManager.getInvalidDestinations()));
 
@@ -1420,6 +1435,7 @@ public class DragAndDropManagerTests {
                         mManager,
                         TestProvidersAccess.HOME_SCREEN_SHORTCUT,
                         mActions,
+                        mDocs,
                         mCallback,
                         mManager.getInvalidDestinations()));
 
@@ -1462,6 +1478,7 @@ public class DragAndDropManagerTests {
                 newManager,
                 new DocumentStack(TestProvidersAccess.DOWNLOADS, docInfo),
                 spyActionHandler,
+                mDocs,
                 mCallback);
 
         mEnv.beforeAsserts();
@@ -1478,7 +1495,7 @@ public class DragAndDropManagerTests {
     private DragAndDropManager createNewManagerWithSpyClipper(TestDocumentClipper spyClipper) {
         DragAndDropManager newManager = new RuntimeDragAndDropManager(
                 mActivity, spyClipper, mEnv.mExecutor, mShadowBuilder, mDefaultIcon,
-                mMockMediaStoreToDocumentUriRewriter) {
+                mEnv.providers) {
             @Override
             void startDragAndDrop(View v, ClipData clipData, DragShadowBuilder builder,
                     Object localState, int flag) {
@@ -1526,6 +1543,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.TRASH_ROOT,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1558,7 +1576,8 @@ public class DragAndDropManagerTests {
         final DocumentStack stack =
                 new DocumentStack(TestProvidersAccess.TRASH_ROOT, TestEnv.FILE_JPG);
         assertFalse(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         verify(mMockPermissions).release();
     }
@@ -1682,6 +1701,7 @@ public class DragAndDropManagerTests {
                 mManager,
                 TestProvidersAccess.HOME,
                 mActions,
+                mDocs,
                 mCallback,
                 mManager.getInvalidDestinations());
 
@@ -1699,10 +1719,11 @@ public class DragAndDropManagerTests {
     public void testDrop_Copies_DropOnDocument_fromOtherApps() throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_COPY,
-                /* dropOnDocument= */ true,
-                /* dstRoot= */ TestProvidersAccess.DOWNLOADS,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_0),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ mMockPermissions,
-                /* uriList= */ List.of(MEDIA_STORE_URI_0, MEDIA_STORE_URI_1));
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
     }
 
     @Test
@@ -1714,10 +1735,11 @@ public class DragAndDropManagerTests {
     public void testDrop_Copies_DropOnShortcut_fromOtherApps() throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_COPY,
-                /* dropOnDocument= */ false,
-                /* dstRoot= */ TestProvidersAccess.DOWNLOADS,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.DOWNLOADS),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ mMockPermissions,
-                /* uriList= */ List.of(MEDIA_STORE_URI_0, MEDIA_STORE_URI_1));
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
     }
 
     @Test
@@ -1725,10 +1747,11 @@ public class DragAndDropManagerTests {
     public void testDrop_Moves_DropOnDocument_fromOtherApps() throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_MOVE,
-                /* dropOnDocument= */ true,
-                /* dstRoot= */ TestProvidersAccess.HOME,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME, TestEnv.FOLDER_0),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ mMockPermissions,
-                /* uriList= */ List.of(MEDIA_STORE_URI_0, MEDIA_STORE_URI_1));
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
     }
 
     @Test
@@ -1740,20 +1763,22 @@ public class DragAndDropManagerTests {
     public void testDrop_Moves_DropOnShortcut_fromOtherApps() throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_MOVE,
-                /* dropOnDocument= */ false,
-                /* dstRoot= */ TestProvidersAccess.HOME,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ mMockPermissions,
-                /* uriList= */ List.of(MEDIA_STORE_URI_0, MEDIA_STORE_URI_1));
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
     }
 
     @Test
     @EnableFlags(Flags.FLAG_DRAGS_FROM_OTHER_APPS)
-    public void testDrop_Rejects_DropOnDocument_fromOtherApps_withNonMediaStoreUri()
+    public void testDrop_Rejects_DropOnDocument_fromOtherApps_withNonDocumentUri()
             throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
-                /* dropOnDocument= */ true,
-                /* dstRoot= */ TestProvidersAccess.HOME,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME, TestEnv.FOLDER_0),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ mMockPermissions,
                 /* uriList= */ List.of(MEDIA_STORE_URI_0, NON_MEDIA_STORE_URI_0));
     }
@@ -1764,12 +1789,13 @@ public class DragAndDropManagerTests {
         Flags.FLAG_ENABLE_TRASH_FLOW_RO,
         Flags.FLAG_USE_MATERIAL3
     })
-    public void testDrop_Rejects_DropOnShortcut_fromOtherApps_withNonMediaStoreUri()
+    public void testDrop_Rejects_DropOnShortcut_fromOtherApps_withNonDocumentUri()
             throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
-                /* dropOnDocument= */ false,
-                /* dstRoot= */ TestProvidersAccess.HOME,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ mMockPermissions,
                 /* uriList= */ List.of(MEDIA_STORE_URI_0, NON_MEDIA_STORE_URI_0));
     }
@@ -1780,10 +1806,11 @@ public class DragAndDropManagerTests {
             throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
-                /* dropOnDocument= */ true,
-                /* dstRoot= */ TestProvidersAccess.HOME,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME, TestEnv.FOLDER_0),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ null,
-                /* uriList= */ List.of(MEDIA_STORE_URI_0, MEDIA_STORE_URI_1));
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
     }
 
     @Test
@@ -1796,24 +1823,86 @@ public class DragAndDropManagerTests {
             throws Exception {
         testDrop_fromOtherApps(
                 /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
-                /* dropOnDocument= */ false,
-                /* dstRoot= */ TestProvidersAccess.HOME,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ true,
                 /* permissions= */ null,
-                /* uriList= */ List.of(MEDIA_STORE_URI_0, MEDIA_STORE_URI_1));
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
+    }
+
+    @Test
+    @EnableFlags(Flags.FLAG_DRAGS_FROM_OTHER_APPS)
+    public void testDrop_Rejects_DropOnDocument_fromOtherApps_withSameParent() throws Exception {
+        testDrop_fromOtherApps(
+                /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME, TestEnv.FOLDER_0),
+                /* dstDocChildList= */ Collections.singletonList(TestEnv.FILE_TXT),
+                /* forceUriPermissions= */ true,
+                /* permissions= */ mMockPermissions,
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
+    }
+
+    @Test
+    @EnableFlags({
+        Flags.FLAG_DRAGS_FROM_OTHER_APPS,
+        Flags.FLAG_ENABLE_TRASH_FLOW_RO,
+        Flags.FLAG_USE_MATERIAL3
+    })
+    public void testDrop_Rejects_DropOnShortcut_fromOtherApps_withSameParent() throws Exception {
+        testDrop_fromOtherApps(
+                /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.HOME),
+                /* dstDocChildList= */ Collections.singletonList(TestEnv.FILE_TXT),
+                /* forceUriPermissions= */ true,
+                /* permissions= */ mMockPermissions,
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
+    }
+
+    @Test
+    @EnableFlags(Flags.FLAG_DRAGS_FROM_OTHER_APPS)
+    public void testDrop_Rejects_DropOnDocument_fromOtherApps_withUnforcedUriPermissions()
+            throws Exception {
+        testDrop_fromOtherApps(
+                /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_0),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ false,
+                /* permissions= */ mMockPermissions,
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
+    }
+
+    @Test
+    @EnableFlags({
+        Flags.FLAG_DRAGS_FROM_OTHER_APPS,
+        Flags.FLAG_ENABLE_TRASH_FLOW_RO,
+        Flags.FLAG_USE_MATERIAL3
+    })
+    public void testDrop_Rejects_DropOnShortcut_fromOtherApps_withUnforcedUriPermissions()
+            throws Exception {
+        testDrop_fromOtherApps(
+                /* expectedOpType= */ FileOperationService.OPERATION_UNKNOWN,
+                /* dstStack= */ new DocumentStack(TestProvidersAccess.DOWNLOADS),
+                /* dstDocChildList= */ Collections.emptyList(),
+                /* forceUriPermissions= */ false,
+                /* permissions= */ mMockPermissions,
+                /* uriList= */ List.of(MEDIA_STORE_URI_0, TestEnv.FILE_TXT.derivedUri));
     }
 
     private void testDrop_fromOtherApps(
             @OpType int expectedOpType,
-            boolean dropOnDocument,
-            RootInfo dstRoot,
+            DocumentStack dstStack,
+            List<DocumentInfo> dstDocChildList,
+            boolean forceUriPermissions,
             @Nullable Permissions permissions,
             List<Uri> uriList)
             throws Exception {
-        final DocumentInfo dstDoc = TestEnv.FOLDER_0;
-        final DocumentStack dstStack = new DocumentStack(dstRoot, dstDoc);
+        final boolean dropOnRoot = dstStack.isEmpty();
+
+        final DocumentStack expectedDstStack =
+                dropOnRoot ? new DocumentStack(dstStack.getRoot(), TestEnv.FOLDER_0) : dstStack;
 
         // Set up action handler.
-        mActions.nextRootDocument = dstDoc;
+        mActions.nextRootDocument = expectedDstStack.peek();
 
         final List<ClipData.Item> itemList =
                 uriList.stream().map(ClipData.Item::new).collect(Collectors.toList());
@@ -1822,36 +1911,51 @@ public class DragAndDropManagerTests {
         Mockito.when(mClipData.getItemCount()).thenReturn(itemList.size());
         Mockito.when(mClipData.getItemAt(anyInt())).thenAnswer(i -> itemList.get(i.getArgument(0)));
 
-        // Set up URI rewriter.
-        Mockito.when(mMockMediaStoreToDocumentUriRewriter.apply(any(), any()))
-                .thenAnswer(
-                        invocation -> {
-                            final Uri uri = invocation.getArgument(1);
-                            return Providers.isMediaStoreUri(uri)
-                                    ? uri.buildUpon()
-                                            .authority(EXTERNAL_STORAGE_PROVIDER_AUTHORITY)
-                                            .build()
-                                    : null;
-                        });
+        // Set up content provider.
+        mEnv.mockProviders
+                .get(EXTERNAL_STORAGE_PROVIDER_AUTHORITY)
+                .setNextChildDocumentsReturns(
+                        dstDocChildList.toArray(new DocumentInfo[dstDocChildList.size()]));
+        mEnv.providers.nextProviderInfo = new ProviderInfo();
+        mEnv.providers.nextProviderInfo.forceUriPermissions = forceUriPermissions;
+
+        // Set up documents access.
+        if (!uriList.isEmpty() && Providers.isMediaStoreUri(uriList.get(0))) {
+            mDocs.nextIsDocumentsUri = true;
+            mDocs.mNextDocumentUri =
+                    DocumentsContract.buildDocumentUri(
+                            EXTERNAL_STORAGE_PROVIDER_AUTHORITY,
+                            Long.toString(ContentUris.parseId(uriList.get(0))));
+        }
 
         // Perform and verify state update.
         assertEquals(
                 DragAndDropManager.STATE_UNKNOWN,
-                mManager.updateState(mUpdateShadowView, dstRoot, dstDoc));
+                mManager.updateState(
+                        mUpdateShadowView,
+                        dstStack.getRoot(),
+                        !dstStack.isEmpty() ? dstStack.peek() : null));
 
         // Perform and verify drop.
         assertTrue(
-                dropOnDocument
+                dropOnRoot
                         ? mManager.drop(
-                                permissions, mClipData, mManager, dstStack, mActions, mCallback)
+                                permissions,
+                                mClipData,
+                                mManager,
+                                dstStack.getRoot(),
+                                mActions,
+                                mDocs,
+                                mCallback,
+                                mManager.getInvalidDestinations())
                         : mManager.drop(
                                 permissions,
                                 mClipData,
                                 mManager,
-                                dstRoot,
+                                dstStack,
                                 mActions,
-                                mCallback,
-                                mManager.getInvalidDestinations()));
+                                mDocs,
+                                mCallback));
 
         mEnv.beforeAsserts();
 
@@ -1865,7 +1969,7 @@ public class DragAndDropManagerTests {
 
             final DocumentStack actualDstStack = actual.first;
             assertNotNull(actualDstStack);
-            assertEquals(dstStack, actualDstStack);
+            assertEquals(expectedDstStack, actualDstStack);
 
             final ClipData actualClipData = actual.second;
             assertNotNull(actualClipData);
@@ -1878,11 +1982,13 @@ public class DragAndDropManagerTests {
                 final Uri actualUri = actualItem.getUri();
                 assertNotNull(actualUri);
 
-                final Uri expectedUri =
-                        uriList.get(i)
-                                .buildUpon()
-                                .authority(EXTERNAL_STORAGE_PROVIDER_AUTHORITY)
-                                .build();
+                Uri expectedUri = uriList.get(i);
+                if (Providers.isMediaStoreUri(expectedUri)) {
+                    expectedUri =
+                            DocumentsContract.buildDocumentUri(
+                                    EXTERNAL_STORAGE_PROVIDER_AUTHORITY,
+                                    Long.toString(ContentUris.parseId(expectedUri)));
+                }
                 assertEquals(expectedUri, actualUri);
             }
 
@@ -1941,7 +2047,8 @@ public class DragAndDropManagerTests {
         final DocumentStack stack =
                 new DocumentStack(TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_1);
         assertFalse(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         verify(mMockPermissions).release();
     }
@@ -1973,6 +2080,7 @@ public class DragAndDropManagerTests {
                         mManager,
                         TestProvidersAccess.DOWNLOADS,
                         mActions,
+                        mDocs,
                         mCallback,
                         mManager.getInvalidDestinations()));
 
@@ -2007,6 +2115,7 @@ public class DragAndDropManagerTests {
                         mManager,
                         TestProvidersAccess.DOWNLOADS,
                         mActions,
+                        mDocs,
                         mCallback,
                         mManager.getInvalidDestinations()));
 
@@ -2041,7 +2150,8 @@ public class DragAndDropManagerTests {
                 new DocumentStack(
                         TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_1, TestEnv.FOLDER_2);
         assertFalse(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         verify(mMockPermissions).release();
     }
@@ -2069,7 +2179,8 @@ public class DragAndDropManagerTests {
                 new DocumentStack(
                         TestProvidersAccess.DOWNLOADS, TestEnv.FOLDER_1, TestEnv.FOLDER_2);
         assertTrue(
-                mManager.drop(mMockPermissions, mClipData, mManager, stack, mActions, mCallback));
+                mManager.drop(
+                        mMockPermissions, mClipData, mManager, stack, mActions, mDocs, mCallback));
 
         mEnv.beforeAsserts();
 
